# easai

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-publish.yml
easai/assistant/: assistant.py  chat_console.py  log.py  loop.py  tool.py
easai/assistant/tools/: coding_tool.py
easai/utils/: console_formatting.py  file_utils.py  local_cache.py
easai_tests/: assistant_loop_systemtests.py  assistant_loop_tests.py  assistant_systemtests.py  assistant_tool_unittests.py  chat_console_systemtests.py  coding_assistant_systemtests.py  coding_tool_integrationtests.py  coding_tool_systemtests.py  file_utils_unittests.py  local_cache_tests.py  sqlite_logging_handler_tests.py
src/easai/utils/: file_utils.py  json_key_value_fetcher.py  sqlite_logging_handler.py
src/tests/: local_cache_tests.py  sqlite_logging_handler_tests.py
