[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "easai"
dynamic = ["version"]
authors = [
  { name="Ole Lynge Sørensen", email="olelynge@gmail.com" },
]
description = "Tools to assist and automate."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/uncas/easai"
Issues = "https://github.com/uncas/easai/issues"

[tool.hatch.version]
source = "vcs"
